# fedzk

./: .env.example  .gitignore  .pre-commit-config.yaml  CHATGPT_PROMPT.md  CITATION.cff  CLEANUP_COMPLETED.md  DEPRECATED_STRUCTURE.md  MANIFEST.in  PRODUCTION_DEPLOYMENT.md  PRODUCTION_STATUS.md  README.md  ROADMAP.md  TASKS.md  TESTING_WITH_REAL_ZK.md  benchmark_results.json  cleanup_repo.sh  cli_benchmark_test.json  fix_project_structure.sh  organize_project.sh  pot12_0001.ptau  powersOfTau28_hez_final_12.ptau  pyproject.toml  requirements-dev.txt  requirements-docs.txt  setup.py  setup_zk.sh  simple_benchmark_results.csv  simple_benchmark_results.json  temp_batch_simple.circom  test_env.sh
assets/: README.md  fedzk_cli_diagram.py
circuits/: model_update_fixed.circom  model_update_secure.circom
config/: docker-compose.prod.yml  secret_metadata.json
docker/: Dockerfile.zk
docs/: .pages  CIRCUIT_REQUIREMENTS.md  CONTRIBUTING.md  Makefile  QUICK_REFERENCE.md  SECURITY.md  TECHNICAL_LIMITATIONS.md  api_reference.md  architecture.md  contribution_guidelines.md  dashboard.md  deployment_guide.md  developer_guide.md  getting_started.md  implementation_details.md  index.md  mkdocs.yml  performance.md  project_structure.md  security_best_practices.md  testing_strategies.md  troubleshooting.md  zk_circuit_development.md  zk_proofs.md
examples/: basic_training.py  custom_circuits.py  differential_privacy.py  distributed_deployment.py  model_compression.py  secure_mpc.py
fedzk/: .gitignore  CHANGELOG.md  README.md
monitoring/: README.md
scripts/: README.md  benchmark_simple.py  build_benchmark.sh  comprehensive_testing_suite.sh  generate_performance_report.py  prepare_test_environment.sh  quick_benchmarks.py  run_all_benchmarks.sh  run_benchmarks.py  run_real_zk_tests.sh  setup_minimal.sh  setup_pypi.sh  setup_zk.sh  summary_of_real_zk_testing.md
secrets/: access_test.enc  api_key.enc  audit_test.enc  backup_api_key.enc  backup_db_pass.enc  concurrent_0_0.enc  concurrent_0_1.enc  concurrent_0_2.enc  concurrent_0_3.enc  concurrent_0_4.enc  concurrent_0_5.enc  concurrent_0_6.enc  concurrent_0_7.enc  concurrent_0_8.enc  concurrent_0_9.enc  concurrent_1_0.enc  concurrent_1_1.enc  concurrent_1_2.enc  concurrent_1_3.enc  (+204 more)
(+319 files in other folders)
