[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedzk"
version = "1.0.0"
description = "Secure Federated Learning with Zero-Knowledge Proofs"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Aaryan Guglani", email = "aaryan@fedzkproject.org"}
]
keywords = [
    "federated-learning", 
    "zero-knowledge-proofs", 
    "privacy-preserving-ai", 
    "machine-learning", 
    "cryptography"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "numpy>=1.21.0",
    "requests>=2.25.1",
    "rich>=10.0.0",
    "typer[all]>=0.4.0",
    "httpx>=0.21.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.5b1",
    "mypy>=0.812",
    "flake8>=3.9.0",
    "pre-commit>=2.13.0",
    "build>=0.8.0",
    "twine>=4.0.0"
]
docs = [
    "mkdocs>=1.1.2",
    "mkdocstrings>=0.15.0",
    "mkdocs-material>=7.1.0"
]
all = [
    "torch>=1.10.0",
    "uvicorn>=0.15.0",
    "fastapi>=0.68.0",
    "pydantic>=1.8.0"
]

[project.scripts]
fedzk = "fedzk.cli:main"

[project.urls]
Homepage = "https://github.com/guglxni/fedzk"
Repository = "https://github.com/guglxni/fedzk"
Documentation = "https://github.com/guglxni/fedzk/docs"
"Bug Tracker" = "https://github.com/guglxni/fedzk/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["fedzk*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=fedzk --cov-report=term-missing" 